# Test_push_code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.git-hooks/: pre-push-pytest.sh
.github/: coderabbit.yaml
.github/workflows/: ci.yml  dependency-review.yml  sonar.yml
apps/: demo_bad_loop.py  demo_yapf.py  test-vuln.py  test_coderabbit.py  test_semgrep_vuln.py  test_sonar_bad.py
apps/tests/unit/: test_collections.py  test_models.py
tests/unit/: test_math.py  test_models.py  test_strings.py
tools/local-gate/: README.md  check_nested_loops.py  check_no_print.py  rules.yaml
